# http-status-codes

./: .env  Dockerfile  LICENSE  README.md  compose.traefik.yml  compose.yml  docker-compose.dev.yml  docker-compose.init.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
flask/: Dockerfile
flask/app/: app.py  const.py  views.py
flask/app/static/css/: base.css
flask/app/templates/: index.html
nginx/: Dockerfile  default.conf  http_status_codes.conf
return_http_status_code/: application.py
return_http_status_code/templates/: index.html
src/return_http_status_code/: application.py
src/return_http_status_code/static/css/: base.css
src/return_http_status_code/static/js/: script.js
src/return_http_status_code/templates/: index.html
tests/: test_index.py  test_return_status_code.py
