[project]
name = "return-http-status-code"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mitty1293", email = "k.fmichi@gmail.com" }
]
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.rye.scripts]
devserver = { cmd = "flask --app src.return_http_status_code.application:app run", env-file = ".env" }

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["I", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"
